--- a/magikarp client/build.gradle
+++ b/magikarp client/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.12.2'
+        classpath 'com.android.tools.build:gradle:0.14.+'
         classpath 'com.github.jtakakura:gradle-robovm-plugin:0.0.10'
     }
 }
@@ -15,7 +15,7 @@ allprojects {
     version = '1.0'
     ext {
         appName = 'Magikarp Game'
-        gdxVersion = '1.3.1'
+        gdxVersion = '1.4.1'
         roboVMVersion = '0.0.14'
     }
 
